--- a/src/app/components/wmks/wmks.component.scss
+++ b/src/app/components/wmks/wmks.component.scss
@@ -1,6 +1,12 @@
 // Copyright 2021 Carnegie Mellon University. All Rights Reserved.
 // Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.
 
+:host {
+  flex: 1;
+  min-height: 0;
+  position: relative;
+}
+
 .wmksContainer {
   position: absolute;
   height: 100%;
